# Wraith

./: .env.example  .gitignore  Cargo.toml  Justfile  Makefile  PLAN.md  README.md  TODO.md  docker-compose.yml
.cargo/: config.toml
agent/: Cargo.toml
agent/src/: main.rs
certs/: README.md
client/: Cargo.toml
client/src/: main.rs
deploy/ansible/: README.md  site.yml
deploy/ansible/group_vars/: all.yml
deploy/ansible/inventories/example/: hosts.yml
deploy/ansible/roles/agent/handlers/: main.yml
deploy/ansible/roles/agent/tasks/: main.yml
deploy/ansible/roles/agent/templates/: agent.env.j2  agent.json.j2  wraith-agent.service.j2
deploy/ansible/roles/common/tasks/: main.yml
deploy/ansible/roles/control_plane/handlers/: main.yml
deploy/ansible/roles/control_plane/tasks/: main.yml
deploy/ansible/roles/control_plane/templates/: agents.json.j2  enrollment-tokens.json.j2  openssl-server.cnf.j2  server.env.j2  wraith-server.service.j2
deploy/ansible/roles/redirector/handlers/: main.yml
deploy/ansible/roles/redirector/tasks/: main.yml
deploy/ansible/roles/redirector/templates/: nginx.conf.j2  wraith-routes.conf.j2
deploy/ansible/roles/wireguard_server/handlers/: main.yml
deploy/ansible/roles/wireguard_server/tasks/: main.yml
deploy/ansible/roles/wireguard_server/templates/: wg0.conf.j2
docker/: Dockerfile  Dockerfile.redirector  entrypoint.redirector.sh  entrypoint.sh
examples/: agent.json  agents.json  enrollment-tokens.json
implant/: Cargo.toml
implant/src/: beacon.rs  config.rs  main.rs
implant/src/modules/: mod.rs
implant/src/modules/common/: file_get.rs  file_put.rs  mod.rs  proc_list.rs  shell.rs  sysinfo.rs
implant/src/modules/linux/: mod.rs
implant/src/modules/windows/: mod.rs
profiles/: Cargo.toml
profiles/examples/: default-https.toml  jquery-malleable.toml
profiles/src/: lib.rs
proto/: orchestrator.proto
redirector/: Cargo.toml
redirector/src/: main.rs
scripts/: generate-certs.sh
secrets/: .gitignore
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
