[workspace]
members = ["shared", "server", "client", "agent"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["OpenAI Codex"]

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
eframe = { version = "0.33", default-features = true, features = ["glow"] }
egui = "0.33"
prost = "0.14"
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = { version = "0.14", features = ["pem", "x509-parser", "crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "uuid", "chrono"] }
sysinfo = "0.37"
time = "0.3"
tokio = { version = "1.48", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport", "tls-webpki-roots", "tls-connect-info"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-build = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
x509-parser = "0.18"
