[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
eframe.workspace = true
egui.workspace = true
rcgen.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared = { path = "../shared" }
