[package]
name    = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace             = true
clap.workspace               = true
eframe.workspace             = true
egui.workspace               = true
reqwest.workspace            = true
serde_json.workspace         = true
tokio.workspace              = true
tonic.workspace              = true
tracing-subscriber.workspace = true
shared = { path = "../shared" }
