[package]
name    = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace             = true
rustls.workspace             = true
clap.workspace               = true
eframe.workspace             = true
egui.workspace               = true
serde_json.workspace         = true
tokio.workspace              = true
tonic.workspace              = true
tracing-subscriber.workspace = true
x509-parser.workspace        = true
shared = { path = "../shared" }
