[package]
name    = "implant"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "implant"
path = "src/main.rs"

[dependencies]
anyhow.workspace     = true
base64.workspace     = true
reqwest.workspace    = true
serde.workspace      = true
serde_json.workspace = true
sysinfo.workspace    = true
tokio.workspace      = true
uuid.workspace       = true

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
