[package]
name    = "redirector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace             = true
axum.workspace               = true
axum-server.workspace        = true
clap.workspace               = true
reqwest.workspace            = true
serde.workspace              = true
serde_json.workspace         = true
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
profiles = { path = "../profiles" }
